- Removed intellectual property integration plugin
- Removed Joomla user profile integration plugin
- Removed Kunena integration plugin
- Removed reCaptcha integration plugin
- Removed Slave Subscriptions feature
- Removed custom SQL plugin
- Removed debug subscriptions email plugin
- Removed obsolete languages
- Removing CLI scripts, they can't work reliably
- No more PostgreSQL support
+ Edit the pre-discount amount in the back-end subscription edit form
+ My Subscriptions module
+ Credit notes (inverse of invoices), created against already issued invoices
+ Invoicing information shown in the backend subscription edit page
+ You can disable the Do Not Track warning
+ PayPal collation plugin
~ The subscription form is now implemented with a Blade template and ONLY supports Bootstrap 3 markup
~ Updated PayPal payments plugin with forced TLSv1.2. You MUST use a compatible server!
~ Working around Joomla! 3.5 and later mail sending backwards incompatible behaviour change
~ Much better solution to remembering form information: Fields will contain saved information from your last subscription when you access the Level page *UNLESS* you have EXPLICITLY ended up there by submitting an invalid form.
~ Updated VAT rates
~ Adjustment for Joomla! 3.6 log dir change
~ Update TCPDF to the newest available v6 release
~ Do not delete New / Cancelled subscriptions, lets the collation plugins do their job correctly
# [HIGH] Recurring subscriptions did not issue invoices
# [HIGH] ATS credits and the reseller plugin were referencing the obsolete FOF 2 instead of the correct FOF 3 classes
# [HIGH] The converted currency price didn't include VAT and signup fees even when the uncoverted price did
# [HIGH] Do not remove akeebabackup.com from the emails. It's breaking the emails we're sending from our own site...
# [HIGH] If someone blanked out their VAT number after using a VIES-registered VAT number no VAT was charged